# ai-customer-chat

./: .env  .env.example  Dockerfile  README.md  app copy.py  app.py  config.py  main.py  pyproject.toml  render.yaml  requirements.txt
data/: mock_data.py
models/: schemas.py
tools/: __init__.py  consultation_tools.py  negotiation_tools.py  order_tools.py  product_tools.py
utils/: helpers.py
