[tool.poetry]
name = "zita-api"
version = "1.0.0"
description = "API for Zita customer service agent"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "zita"}]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.3"}
langchain = "^0.3.25"
langchain-groq = "^0.3.2"
langchain-community = "^0.3.24"
langchain-core = "^0.3.59"
langchain-text-splitters = "^0.3.8"
python-decouple = "^3.8"
pydantic = "^2.11.4"
pydantic-settings = "^2.9.1"
requests = "^2.32.3"
python-dotenv = "^1.1.0"
groq = "^0.24.0"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 8000"